--- a/TransferLearning.ipynb
+++ b/TransferLearning.ipynb
@@ -624,6 +624,57 @@
     "result = ensemble_predict(\"example.jpg\")\n",
     "print(\"Predicted class:\", result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "170f4dd5",
+   "metadata": {},
+   "source": [
+    "##### Evaluate the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a1ac1c76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble Validation Accuracy: 82.68%\n"
+     ]
+    }
+   ],
+   "source": [
+    "resnet.eval()\n",
+    "mobilenet.eval()    \n",
+    "\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for images, labels in val_loader:\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
+    "\n",
+    "        # Get outputs from both models\n",
+    "        output_resnet = resnet(images)\n",
+    "        output_mobilenet = mobilenet(images)\n",
+    "\n",
+    "        # Average the outputs (soft voting)\n",
+    "        avg_output = (output_resnet + output_mobilenet) / 2\n",
+    "\n",
+    "        # Get predicted class\n",
+    "        _, predicted = torch.max(avg_output, 1)\n",
+    "\n",
+    "        # Update counters\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "accuracy = 100 * correct / total\n",
+    "print(f'Ensemble Validation Accuracy: {accuracy:.2f}%')\n"
+   ]
   }
  ],
  "metadata": {
